--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap');
 
-body{
+body {
     margin: 0;
     text-align: center;
 }
 
-.top{
+.top {
     background-color: #C4DDFF;
     padding-top: 1px;
 
 }
 
-h1{
-  font-family: "Montserrat", sans-serif;
-  font-size: 5.625rem;
-  margin: 50px auto 0;
-  color: #001D6E;
+h1 {
+    font-family: "Montserrat", sans-serif;
+    font-size: 5.625rem;
+    margin: 50px auto 0;
+    color: #001D6E;
 }
 
-h2{
-  font-family: "Montserrat", sans-serif;
-
+h2 {
+    font-family: "Montserrat", sans-serif;
 }
 
-.pp{
+.pp {
     border-radius: 100%;
     height: 20rem;
     padding-top: 3rem;
     padding-bottom: 1rem;
 }
 
-.cat1{
+.cat1 {
     height: 8rem;
     position: relative;
     bottom: 9rem;
     right: 19rem;
 }
 
-.keyboard{
+.keyboard {
     height: 8rem;
     position: relative;
     top: 4rem;
     left: 16rem;
 }
 
-.aboutme{
-    width: 50rem;
+.aboutme {
+    width: 100rem;
     margin: auto;
     background-color: #E4F6F6;
     padding-top: 1px;
 }
 
+a {
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 0;
+}
+
+a:link {
+    color: #265301;
+}
+
+a:visited {
+    color: #437A16;
+}
+
+a:focus {
+    border-bottom: 1px solid;
+    background: #BAE498;
+}
+
+a:hover {
+    border-bottom: 1px solid;
+    background: #CDFEAA;
+}
+
+a:active {
+    background: #265301;
+    color: #CDFEAA;
+}
